# provisioning

./: .gitignore  .vault-password.example  README.md  fresh-nixos-guide.md
.ssh/: config
nixos-config/: .configuration.nix.swp  .flake.nix.swp  Makefile  configuration.nix  flake.nix  home.nix
nixos-config/home/: default.nix
nixos-config/home/all/: all.nix  (+1 more)
nixos-config/modules/: system.nix
nixos-config/python-development-on-nixos/: Dockerfile  README.md  main.py  requirements.txt
provision-doylestone02/: pyproject.toml
provision-doylestone02/ansible/: ansible.cfg  inventory  main.yml
provision-doylestone02/ansible/inventory/group_vars/: all  vault.yml
provision-doylestone02/ansible/roles/base/tasks/: main.yml
provision-doylestone02/ansible/roles/docker/defaults/: main.yml
provision-doylestone02/ansible/roles/docker/tasks/: main.yml
provision-doylestone02/ansible/roles/gantsign.oh-my-zsh/meta/: .galaxy_install_info
provision-doylestone02/ansible/roles/geerlingguy.ansible/meta/: .galaxy_install_info
provision-doylestone02/ansible/roles/pallxk.code_server/: README.md
provision-doylestone02/ansible/roles/pallxk.code_server/defaults/: main.yml
provision-doylestone02/ansible/roles/pallxk.code_server/meta/: .galaxy_install_info
provision-doylestone02/ansible/roles/pallxk.code_server/tasks/: check-code-server.yml  install-code-server.yml
provision-doylestone02/ansible/roles/pallxk.code_server/templates/: code-server.service
provision-doylestone02/ansible/roles/pallxk.code_server/vars/: main.yml
provision-doylestone03/: Vagrantfile  main.yml
(+7 files in other folders)
