[tool.poetry]
name = "provision-doylestone02"
version = "0.1.0"
description = ""
authors = ["Jon Whittlestone <dev@howapped.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
ansible = "^7.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
